add fatos, imgs e legendas na timeline

--- a/Mitologia.html
+++ b/Mitologia.html
@@ -119,7 +119,7 @@
 				<div class="col-lg-3 order-0 order-lg-1">
 					<figure>
 						<img class="campbell" src="assets/img/campbell.jpg" alt="">
-						<figcaption>Joseph Campbel <br><b>Fonte:</b> Wikipédia <sup><a href="#">[1]</a></sup></figcaption>
+						<figcaption>Joseph Campbel <br><b>Fonte:</b> Enciclopédia Britânica <sup><a href="https://cdn.britannica.com/s:300x300/21/129221-004-E739B8FC.jpg">[1]</a></sup></figcaption>
 					</figure>
 				</div>
 			</div>
@@ -129,7 +129,7 @@
 				<div class="col-lg-3 order-0 order-lg-0">
 					<figure>
 						<img class="livro" src="assets/img/livrocampbell.jpg" alt="">
-						<figcaption>O Poder do Mito <br><b>Fonte:</b> Wikipédia<sup><a href="https://images.livrariasaraiva.com.br/imagemnet/imagem.aspx/?pro_id=356063&qld=90&l=430&a=-1"
+						<figcaption>O Poder do Mito <br><b>Fonte:</b> Saraiva<sup><a href="https://images.livrariasaraiva.com.br/imagemnet/imagem.aspx/?pro_id=356063&qld=90&l=430&a=-1"
 								 target="_blank"> [2]</a></sup></figcaption>
 					</figure>
 				</div>
