--- a/Cultura.html
+++ b/Cultura.html
@@ -72,8 +72,8 @@
         <div class="row intro justify-content-center align-items-center">
             <div class="col-sm-10 texto text-center text-white">
                 <h1 class="Titulo"> Cultura Iorubá</h1>
-                <p class="font-italic">"[...] Apesar de formas diferentes, haviam assuntos semelhantes aboradados nas
-                    diversas mitologias [...]"</p>
+                <p class="font-italic">"Na África, as nações das distintas partes do território têm seus modos  diferentes de cortar o cabelo e são conhecidas por essa marca a que parte do território pertencem"</p>
+                <p class="font-italic text-right">— Mahommah G. Baquaqua</p>
             </div>
         </div>
 
