border-readius nas iamgens

--- a/Cultura.html
+++ b/Cultura.html
@@ -117,7 +117,7 @@
                                 adicionado o termo "africana" justamente para especificar a qual diáspora se referem.</p>
 
                             <figure>
-                                <img class="img-fluid" src="assets/img/diaspora-africana.jpg" alt="">
+                                <img class="img-fluid shadow" src="assets/img/diaspora-africana.jpg" alt="">
                                 <figcaption>Diáspora Africana - Destinos<br><b>Fonte:</b> Flickr <sup><a href="https://c1.staticflickr.com/3/2752/4349420978_baac9418f3.jpg"
                                             target="_blank">[7]</a></sup></figcaption>
                             </figure>
