--- a/Mitologia.html
+++ b/Mitologia.html
@@ -464,16 +464,16 @@
 		</div>
 	</div>
 
-<!--FOOTER + MAPA DE SITE-->
-<footer class="container-fluid bg-color-preto">
+ <!--FOOTER + MAPA DE SITE-->
+ <footer class="container-fluid bg-color-preto">
 	<div class="row justify-content-center">
 
 		<div class="col-md-2">
 			<div class="footer_menu">
 				<ul>
 					<li class="font-weight-bold">Mitologia</li>
-					<li><a href="Mitologia.html #Joseph_Campbel">Joseph Campbel</a></li>
-					<li><a href="Mitologia.html #Mitologia_dos_Povos">Mitologia dos Povos</a></li>
+					<li><a href="Mitologia.html#Joseph_Campbel">Joseph Campbel</a></li>
+					<li><a href="Mitologia.html#Mitologia_dos_Povos">Mitologia dos Povos</a></li>
 				</ul>
 			</div>
 		</div>
@@ -482,9 +482,9 @@
 			<div class="footer_menu">
 				<ul>
 					<li class="font-weight-bold">Cultura Iorubá</li>
-					<li><a href="Cultura.html #Contexto_Historico_Africano">Contexto Histórico</a></li>
-					<li><a href="Cultura.html #Sociedade_Ioruba">Sociedade Iorubá</a></li>
-					<li><a href="Cultura.html #religiao">A Religião</a></li>
+					<li><a href="Cultura.html#Contexto_Historico_Africano">Contexto Histórico</a></li>
+					<li><a href="Cultura.html#Sociedade_Ioruba">Sociedade Iorubá</a></li>
+					<li><a href="Cultura.html#religiao">A Religião</a></li>
 				</ul>
 			</div>
 		</div>
@@ -501,17 +501,17 @@
 			</div>
 		</div>
 
-	  
+
 		<div class="col-md-2">
-				<div class="footer_menu sub">
-					<ul>
-						<li><a href="Oxala.html">Oxalá</a></li>
-						<li><a href="Oxum.html">Oxum</a></li>
-						<li><a href="Xango.html">Xangô</a></li>
-						<li><a href="Outros_Orixas.html">Outros Orixás</a></li>
-					</ul>
-				</div>
+			<div class="footer_menu sub">
+				<ul>
+					<li><a href="Oxala.html">Oxalá</a></li>
+					<li><a href="Oxum.html">Oxum</a></li>
+					<li><a href="Xango.html">Xangô</a></li>
+					<li><a href="Outros_Orixas.html">Outros Orixás</a></li>
+				</ul>
 			</div>
+		</div>
 
 		<div class="col-md-2">
 			<div class="footer_menu">
@@ -536,7 +536,8 @@
 	<div class="row justify-content-center">
 		<div class="col-md-12">
 			<div class="footer-copyright text-white text-center pt-2 pb-2">
-					<p class="font-italic">Copyright © MitoAfro- 2018 - Todos os direitos reservados. Desenvolvido por Guccy.</p>
+				<p class="font-italic">Copyright © MitoAfro- 2018 - Todos os direitos reservados. Desenvolvido por
+					Guccy.</p>
 			</div>
 		</div>
 	</div>
