alterei as datas

--- a/Cultura.html
+++ b/Cultura.html
@@ -231,7 +231,7 @@
 
                 <li data-date="01/01/1559">
                     <h2>Primeiros escravizados</h2>
-                    <em>January 16, 1559</em>
+                    <em>1559</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
@@ -248,7 +248,7 @@
 
                 <li data-date="01/01/1694">
                     <h2>Rebelião em Palmares</h2>
-                    <em>January 16, 1694</em>
+                    <em>20 de novembro de 1694</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
@@ -265,7 +265,7 @@
 
                 <li data-date="01/01/1810">
                     <h2>Pressão Inglesa</h2>
-                    <em>January 16, 1810</em>
+                    <em>1810</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row fato-sem-img">
                         <div class="texto text-justify media-body">
@@ -278,7 +278,7 @@
 
                 <li data-date="01/01/1823">
                     <h2>Abolição Gradual</h2>
-                    <em>January 16, 1823</em>
+                    <em>1823</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
@@ -295,7 +295,7 @@
 
                 <li data-date="01/01/1831">
                     <h2>Lei para Inglês Ver</h2>
-                    <em>January 16, 1831</em>
+                    <em>1831</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row fato-sem-img">
                         <div class="texto text-justify media-body">
@@ -308,7 +308,7 @@
 
                 <li data-date="01/01/1850">
                     <h2>Lei Eusébio de Queirós</h2>
-                    <em>January 16, 1850</em>
+                    <em>1850</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row fato-sem-img">
                         <div class="texto text-justify media-body">
@@ -321,7 +321,7 @@
 
                 <li data-date="01/01/1871">
                     <h2>Lei de Ventre Livre</h2>
-                    <em>January 16, 1871</em>
+                    <em>1871</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
@@ -338,7 +338,7 @@
 
                 <li data-date="01/01/1885">
                     <h2>Lei dos Sexagenários</h2>
-                    <em>January 16, 1885</em>
+                    <em>1885</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row fato-sem-img">
                         <div class="texto text-justify media-body">
@@ -351,7 +351,7 @@
 
                 <li data-date="01/01/1888">
                     <h2>Liberdade?!</h2>
-                    <em>January 16, 1888</em>
+                    <em>13 de maio de 1888</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
@@ -368,7 +368,7 @@
 
                 <li data-date="01/01/1934">
                     <h2>Direito ao Voto</h2>
-                    <em>January 16, 1934</em>
+                    <em>1934</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
@@ -385,7 +385,7 @@
 
                 <li data-date="01/01/1935">
                     <h2>Primeira Deputada Negra</h2>
-                    <em>January 16, 1935</em>
+                    <em>1935</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
@@ -402,7 +402,7 @@
 
                 <li data-date="01/01/1951">
                     <h2>Racismo</h2>
-                    <em>January 16, 1951</em>
+                    <em>1951</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row fato-sem-img">
                         <div class="texto text-justify media-body">
@@ -415,7 +415,7 @@
 
                 <li data-date="01/01/1969">
                     <h2>Primeiro Protagonista Negro</h2>
-                    <em>January 16, 1969</em>
+                    <em>1969</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
@@ -432,7 +432,7 @@
 
                 <li data-date="01/01/1988">
                     <h2>Direito de Posse aos Quilombos</h2>
-                    <em>January 16, 1988</em>
+                    <em>1988</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
@@ -449,7 +449,7 @@
 
                 <li data-date="01/01/1989">
                     <h2>Crime Inafiançável</h2>
-                    <em>January 16, 1989</em>
+                    <em>1989</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row fato-sem-img">
                         <div class="texto text-justify media-body">
@@ -462,7 +462,7 @@
 
                 <li data-date="01/01/2002">
                     <h2>Políticas Afirmativas</h2>
-                    <em>January 16, 2002</em>
+                    <em>2002</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
@@ -479,7 +479,7 @@
 
                 <li data-date="01/01/2012">
                     <h2>Primeiro Presidente do STF Negro</h2>
-                    <em>January 16, 2012</em>
+                    <em>2012</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
@@ -496,7 +496,7 @@
 
                 <li data-date="01/01/2017">
                     <h2>Cotas para USP</h2>
-                    <em>January 16, 2017</em>
+                    <em>2017</em>
 
                     <div class="row justify-content-center align-items-center media flex-column flex-md-row">
                         <figure>
